<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.product.BuyMenuFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/productCube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clFilterCategoryBuyMenu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFilterCategoryBuyMenu"
        style="@style/Widget.MaterialComponents.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="24dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintTop_toBottomOf="@+id/llBuyPostedHeader">

        <TextView
            android:id="@+id/tvLabelBuyMenuCategoryFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgBuyMenuCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:chipSpacingVertical="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelBuyMenuCategoryFilter"
            app:selectionRequired="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/Electronics"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/electronics"
                tools:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Housing"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/housing" />

            <com.google.android.material.chip.Chip
                android:id='@+id/Education'
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Education" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Sport"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApplyBuyMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{ () -> viewModel.resetFilters() }"
            android:text="Apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cgBuyMenuCategory" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetBuyMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{ () -> viewModel.resetFilters() }"
            android:text="Reset"
            app:layout_constraintBottom_toBottomOf="@+id/btnApplyBuyMenu"
            app:layout_constraintEnd_toStartOf="@+id/btnApplyBuyMenu"
            app:layout_constraintTop_toTopOf="@+id/btnApplyBuyMenu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llBuyPostedHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/user_themes"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/svBuySearch"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_text_background_sell"
            android:iconifiedByDefault="false"
            android:queryHint="Search here" />


        <ImageView
            android:id="@+id/ivBuyFilter"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="0"
            android:src="@drawable/baseline_filter_alt_24"
            android:tint="@color/white"
            app:srcCompat="@drawable/baseline_filter_alt_24"
            tools:srcCompat="@drawable/baseline_filter_alt_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>